# XtalFlow

./: .gitignore  README.md  pyproject.toml  requirements-legacy.txt  requirements-py39.txt  requirements.txt  xtalflow.example.toml
chems/: DF-testset.csv  DFCoreSet.csv  DFCoreSet.csv_2  PrestWick_DrugFragCoreSet_custom_07.csv  UBX01.csv  UC-192873.csv  UC-192873_3of3.csv  UC-204426-01.csv  UC-204426-02.csv  UTR1-DFCoreSet-2nd.csv
codex/: codebase_review_ko.md  implementation_sequence_ko.md  python_version_recommendation_ko.md  refactoring_roadmap_ko.md  target_architecture_ko.md  user_identity_and_access_ko.md
evaSrc/: main.py
src/: main.py  main.py_241102  simply.py  sv2.py  sv3.py  temp  test.py
src/utils/: @  adpt.py  chem.py  func.py  misc.py  rank_fx.py
src/xtalflow/: __init__.py  mxlive_read.py  settings.py  viewer.py
src_xtalviewer_2_0_legacy/: 1  @  drag.py  eval.py  evalue.py  main.py_bk  main2.py  new_main.py  pret.py  run_program.sh  temp.py  test2.py
src_xtalviewer_2_0_legacy/config/: screen
tests/: test_calibration.py  test_crystal_selection.py  test_experiment_naming.py  test_fragment_library_csv.py  test_fragment_screening.py  test_geometry.py  test_labwork.py  test_mxlive_client.py  test_mxlive_config.py  test_mxlive_read.py  test_plate_format.py  test_project.py  test_project_controller.py  test_raw_crystal.py  test_review.py  test_review_controller.py  test_review_store.py  test_rmserver_repository.py  test_settings.py  test_user_preferences.py  test_viewer.py  test_worksheet_exporter.py  test_worksheets.py
tests/fixtures/: README.md
(+58 files in other folders)
