[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "xtalflow"
version = "0.1.0"
description = "Crystal image review and experiment workflow"
requires-python = ">=3.12,<3.13"
dependencies = [
    "PyQt5==5.15.11",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
]

[project.scripts]
xtalflow-viewer = "xtalflow.viewer:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "requires_rmserver_fixture: requires local tests/fixtures/rmserver image data",
]
