[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "xtalflow"
version = "0.1.0"
description = "Crystal image review and experiment workflow"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy==1.26.4",
    "opencv-python-headless==4.10.0.84",
    "PyQt5==5.15.11",
    "cryptography==45.0.5",
    "msgpack==1.1.1",
    "requests==2.32.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
]

[project.scripts]
xtalflow-viewer = "xtalflow.viewer:main"
xtalflow-mxlive-read = "xtalflow.mxlive_read:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "requires_rmserver_fixture: requires local tests/fixtures/rmserver image data",
]
